# specklepy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codebook.toml  docker-compose-internal.yml  docker-compose.yml  main.py  mise.toml  mkdocs.yml  netlify.toml  patch_version.py  pyproject.toml  requirements-docs.txt  requirements.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/PULL_REQUEST_TEMPLATE/: PR_TEMPLATE.md
.github/workflows/: docs.yml  github-action.yml  pr.yml  publish.yml
docs/: index.md
docs/speckle_automate/: automation_context.md  runner.md  schema.md
docs/specklepy/api/: client.md  credentials.md  operations.md
docs/specklepy/logging/: exceptions.md
docs/specklepy/objects/: base.md  data_objects.md
docs/specklepy/serialization/: serializer.md
docs/specklepy/transports/: transports.md
docs/stylesheets/: extra.css
example/: base_registrar.py  many_children.py  object_examples.py  send_receive.py  stream_copy.py  stream_objects.py  units_none.py  using_speckle_base.py
speckle/api/: client.py  credentials.py  models.py  operations.py  resource.py  speckle2schema.graphql
speckle/api/resources/: __init__.py  branch.py  commit.py  object.py  server.py  stream.py  subscriptions.py  user.py
speckle/logging/: exceptions.py
speckle/objects/: __init__.py  base.py  fakemesh.py  geometry.py  mesh.py  point.py  units.py
speckle/objects/built_elements/: beam.py  brace.py  column.py  duct.py  element.py  floor.py  grid_line.py  level.py  opening.py  roof.py  room.py  topography.py  wall.py
speckle/objects/geometry/: Arc.py  Block.py  Box.py  Circle.py  Curve.py  Ellipse.py  Extrusion.py  Line.py  Mesh.py  Plane.py  Point.py  Polycurve.py  Polyline.py  Vector.py  __init__.py
speckle/objects/primitives/: interval.py  interval2d.py
speckle/serialization/: base_object_serializer.py
speckle/transports/: abstract_transport.py  memory.py  server.py  sqlite.py
specklepy/api/: client.py  credentials.py  host_applications.py  models.py  operations.py  resource.py  speckle2schema.graphql  wrapper.py
specklepy/api/resources/: branch.py  (+7 more)
specklepy/logging/: exceptions.py  metrics.py
specklepy/objects/: base.py  encoding.py  fakemesh.py  geometry.py  other.py  structural_analysis.py  structural_geometry.py  structural_loading.py  structural_material.py  structural_properties.py  units.py
specklepy/serialization/: base_object_serializer.py
specklepy/transports/: abstract_transport.py  memory.py  sqlite.py
src/: mkdocs.yml
src/docs/: index.md
src/speckle_automate/: __init__.py  automation_context.py  fixtures.py  helpers.py  runner.py  schema.py
src/speckleifc/: __main__.py  bundle_exporter.py  ifc_geometry_processing.py  ifc_iterator.py  ifc_openshell_helpers.py  importer.py  level_proxy_manager.py  main.py  manual_import.py  property_extraction.py  qtos_only.py  quantity_extraction.py  render_material_proxy_manager.py  root_object_builder.py
src/specklepy/: __init__.py  mkdocs.yml  paths.py
tests/: conftest.py  test_active_user.py  test_base.py  test_branch.py  test_client_and_ops.py  test_commit.py  test_geometry.py  test_host_applications.py  test_objects.py  test_other_user.py  test_registering_base.py  test_serialization.py  test_server.py  test_stream.py  test_structural.py  test_transforms.py  test_traverse_value.py  test_type_validation.py  test_user.py  test_wrapper.py
tests/bundle/: test_eav_extraction.py  test_ifc_exporter.py  test_pipeline.py  test_sgeo.py  test_writers.py
tests/integration/: conftest.py  fakemesh.py  test_connector_versions.py  test_metrics.py  test_progress.py  test_serialization.py  test_stream.py  test_wrapper.py
tests/intergration/: conftest.py  test_active_user.py  test_commit.py  test_stream.py  test_user.py  test_wrapper.py
tests/objects/: test_arc.py  test_box.py  test_circle.py  test_control_point.py  test_curve.py  test_data_objects.py  test_ellipse.py  test_line.py  test_mesh.py  test_plane.py  test_point.py  test_point_cloud.py  test_polycurve.py  test_polyline.py  test_region.py  test_spiral.py  test_surface.py  test_text.py  test_vector.py
tests/unit/: test_account_server_migration.py  test_base.py  test_geometry.py  test_graph_traversal.py  test_host_applications.py  test_instances.py  test_path.py  test_proxies.py  test_registering_base.py  test_setup_session.py  test_structural.py  test_transforms.py  test_traverse_value.py  test_type_validation.py  test_unit_scaling.py
tests/unit_tests/: test_path.py
utils/: installer.py
(+423 files in other folders)
