[project]
dynamic = ["version"]
# version = "3.0.0a1"
name = "specklepy"
description = "The Python SDK for Speckle 2.0"
readme = "README.md"
authors = [{ name = "Speckle Systems", email = "devops@speckle.systems" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10.0, <4.0"
dependencies = [
    "appdirs>=1.4.4",
    "attrs>=24.3.0",
    "deprecated>=1.2.15",
    "gql[requests,websockets]>=3.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "stringcase>=1.2.0",
    "ujson>=5.10.0",
]

[tool.setuptools]
license-files = []

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "devtools>=0.12.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-ordering>=0.6",
    "ruff>=0.9.2",
    # "setuptools-scm>=8.1.0",
    "types-deprecated>=1.2.15.20241117",
    "types-requests>=2.32.0.20241016",
    "types-ujson>=5.10.0.20240515",
]

[project.urls]
repository = "https://github.com/specklesystems/specklepy"
documentation = "https://speckle.guide/dev/py-examples.html"
homepage = "https://speckle.systems/"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.9.2"
tag_format = "$version"

[tool.ruff]
exclude = [".venv", "**/*.yml"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["UP006", "UP007", "UP035"]
