[project]
name = "speckleifc"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Speckle Systems", email = "devops@speckle.systems" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ifcopenshell>=0.8.2",
    "specklepy>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
lint = [
    "ruff>=0.11.13",
]

[tool.ruff]
exclude = [".venv", "**/*.yml"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/specklesystems/ifc-openshell-file-importer"
documentation = "https://speckle.guide/dev/py-examples.html"
homepage = "https://speckle.systems/"
